CRAPP-303: Authors review are not counted in the approval strategy
  * Ensure to take into account the configuration option for counting or
    not the author review